@@ -1,7 +1,5 @@
 package vents;
 
-import static java.util.stream.Collectors.*;
-
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.UncheckedIOException;
@@ -11,6 +9,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
+import java.util.function.Predicate;
 import java.util.regex.MatchResult;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
@@ -23,8 +22,17 @@ public class App {
         var app = new App();
         var path = app.getInputPath("input.txt");
         var lines = app.loadLines(path);
-        var field = new Field(lines);
-        System.out.println(field.numHotspots(2));
+        app.printResults(1, new Field(lines.stream().filter(Predicate.not(Line::isDiagonal)).toList()));
+        app.printResults(2, new Field(lines));
+    }
+
+    void printResults(int part, Field field) {
+        if (field.numCols < 100) {
+            System.out.println("Part %d\n%s\nHotspots: %d\n".formatted(part, field, field.numHotspots(2)));
+        } else {
+            System.out.println("Part %d\nHotspots: %d\n".formatted(part, field.numHotspots(2)));
+        }
+
     }
 
     Path getInputPath(String file) {
@@ -41,7 +49,7 @@ public class App {
 
     List<Line> loadLines(Path path) {
         try (Stream<String> lines = Files.lines(path)) {
-            return lines.map(this::parseLine).collect(toList());
+            return lines.map(this::parseLine).toList();
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
